--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    input{
+        @apply outline-none text-xs md:text-base 
+    }
+    textarea{
+        @apply outline-none text-xs md:text-base
+    }
+}
